--- a/frontend/src/app/page.module.scss
+++ b/frontend/src/app/page.module.scss
@@ -41,3 +41,23 @@
   width: 100%;
   height: 214px;
 }
+
+.qr_reader {
+  h2 {
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+  }
+  margin-bottom: 64px;
+}
+
+.stamp {
+  h2 {
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+  }
+  margin-bottom: 64px;
+}
