Feature/#65  リリースに向けた準備 (#66)
* #65 ホーム画面とブログ画面において、本番環境で使用する画像をアップロード

* #64 本番用のメインビジュアル・ロゴ・スタンプボードの画像をアップロード

* #64 ホーム画面にヘッダーを追加。さらに使い方の説明文を追加し、説明文上のUI画像を追加

* #65 ブログ画面の、最初の画面に戻るボタンの範囲を拡大

* #65 ホーム画面のQRコードを読み取るボタンのデザインを変更。QRコードを読み取った際に出るメッセージを変更。

* #65 ヘッダーのハンバーガーメニュー下に、ホームへのリンクを追加

* #65 常に画像全体が表示されるよう、ブログ画面のスライドショーのstyleを変更

* #65 スタンプボードが本番環境用のスタンプボードの画像を読み込むように変更

* #65 スタンプボード内のあだ名が、枠に収まるようにcssとタグ構成を変更

* #65 スライドショーのアニメーション速度を調整

* #65 サーバが止まったとき用に、ダミーデータを本番環境のものに更新

* #65 ページ名を変更

--- a/frontend/src/components/ReadQRCode.module.scss
+++ b/frontend/src/components/ReadQRCode.module.scss
@@ -1,6 +1,12 @@
 .camera_start_button {
   width: 100%;
   max-width: 300px;
+  height: 82px;
+  border-radius: 22px;
+  font-size: 24px;
+  background-color: #62e3ff;
+  border: none;
+  outline: none;
 }
 
 .video {
