--- a/frontend/src/components/ShowStampBoard.module.scss
+++ b/frontend/src/components/ShowStampBoard.module.scss
@@ -15,10 +15,17 @@
   border: 1px dotted #999;
   font-size: 14px;
   font-weight: bold;
-  line-height: 100px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-wrap: balance;
+
+  p {
+    margin: 7px 7px;
+  }
 }
